--- a/index.html
+++ b/index.html
@@ -31,25 +31,23 @@
 
 <body>
   <div class="loading">
-    <div class="loadbox"> <img src="./images/loading.gif"> 页面加载中... </div>
+    <div class="loadbox"> <img src="./images/loading.gif"> Loading... </div>
   </div>
   <div class="data">
     <div class="data-title">
-      <div class="title-center">Job&Income</div>
+      <div class="title-center">Career & Income</div>
     </div>
     <div class="data-content">
       <div class="con-left fl">
         <div class="top-bottom boxstyle">
-          <div class="title">伦敦各区职业占比</div>
+          <div class="title">Careers by Borough</div>
           <div id="echarts_1" class="charts"></div>
         </div>
         <div class="left-bottom boxstyle">
           <div class="title">
-            <a href="javascript:void(0)" style="color: white;" onclick="titleClick(this)">失业率</a>
+            <a href="javascript:void(0)" style="color: green;" onclick="titleClick(this)">Unemployment</a>
             <span style="color: aquamarine;"> | </span>
-            <a href="javascript:void(0)" style="color: white;" onclick="titleClick(this)">可支配收入</a>
-            <span style="color: aquamarine;"> | </span>
-            <a href="javascript:void(0)" style="color: white;" onclick="titleClick(this)">职业占比</a>
+            <a href="javascript:void(0)" style="color: white;" onclick="titleClick(this)">Disposable Income</a>
           </div>
           <div id="echarts_2" class="charts"></div>
           <div id="echarts_x" class="charts" style="display: none;"></div>
@@ -59,15 +57,14 @@
         <div class="cen-top map boxstyle" id="map"></div>
       </div>
       <div class="con-right fr">
-        <div class="right-top boxstyle">
-          <div class="title">伦敦总职业占比</div>
-          <div id="echarts_4" class="charts"></div>
-        </div>
         <div class="right-center boxstyle">
-          <div class="title">年度新闻</div>
+          <div class="title">NEWS</div>
           <div class=" boxstyle liMarquee" style="width: 90%;margin: 0 auto;border-width: 0;">
-
           </div>
+        </div>
+        <div class="right-top boxstyle">
+          <div class="title">Changing of Careers in London</div>
+          <div id="echarts_4" class="charts"></div>
         </div>
       </div>
     </div>
