--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Job&Income</title>
+  <title>Employment&Income</title>
   <link rel="stylesheet" href="css/common.css">
   <link rel="stylesheet" href="css/map.css">
   <link rel="stylesheet" href="css/liMarquee.css">
@@ -35,12 +35,12 @@
   </div>
   <div class="data">
     <div class="data-title">
-      <div class="title-center">Career & Income</div>
+      <div class="title-center"> Employment & Income</div>
     </div>
     <div class="data-content">
       <div class="con-left fl">
         <div class="top-bottom boxstyle">
-          <div class="title">Careers by Borough</div>
+          <div class="title">Employment by Borough</div>
           <div id="echarts_1" class="charts"></div>
         </div>
         <div class="left-bottom boxstyle">
@@ -63,7 +63,7 @@
           </div>
         </div>
         <div class="right-top boxstyle">
-          <div class="title">Changing of Careers in London</div>
+          <div class="title">Changing of Employment in London</div>
           <div id="echarts_4" class="charts"></div>
         </div>
       </div>
